Address spacing issues with stats panel for various screen widths, particularly iPhone

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,9 +27,11 @@ html {
 
 .material-icons,
 .material-icons-outlined {
-  font-size: 37px;
+  position: relative;
+  font-size: 32px;
   color: #223a14;
   user-select: none;
+  top: 2px;
 }
 
 img {
@@ -136,7 +138,7 @@ button:disabled {
 .control-panel.preferences button {
   background-color: #849455;
   padding: 5px 18px 5px 18px;
-  opacity: .85;
+  opacity: 0.85;
 
   &:hover {
     opacity: 1;
@@ -227,7 +229,7 @@ button:disabled {
 .control-panel button.reset {
   background-color: #7a2e2e;
   color: white;
-  letter-spacing: .1ch;
+  letter-spacing: 0.1ch;
   padding: 0.4ch 0.65ch 0.4ch 0.8ch;
 }
 
@@ -640,8 +642,7 @@ button:disabled {
   display: flex;
   justify-content: space-between;
   align-items: end;
-  margin-top: 5px;
-  padding: 10px;
+  padding: 4px;
   grid-row: 3 / 4;
   grid-column: 1 / -1;
 }
@@ -816,9 +817,8 @@ button:disabled {
   grid-row: 2 / 3;
   grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: 1fr 1.3fr;
-  grid-template-rows: minmax(22px, 20%) 1fr;
-  grid-template-rows: max(22px, 17%) 1fr;
+  grid-template-columns: 1fr 1.8fr;
+  grid-template-rows: max(22px, 15%) 1fr;
   background-color: #c0ced9;
   opacity: 0;
   transition: 1s;
@@ -838,7 +838,7 @@ button:disabled {
   align-items: center;
   background: linear-gradient(90deg, rgba(133, 191, 214, 1) 0%, rgba(176, 217, 206, 1) 100%);
   box-shadow: 0px 5px 17px 3px #e3edf6;
-  font-size: 2vw;
+  font-size: 1.7vw;
   letter-spacing: 0.1ch;
 
   h3 a {
@@ -849,28 +849,29 @@ button:disabled {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -2px;
+    bottom: -1px;
     width: 0;
     height: 1px;
     background-color: currentColor;
     transition: width 0.3s ease-in-out;
   }
 
-  h3 a:hover::after {
-    width: 100%;
+  @media (hover: hover) {
+    h3 a:hover::after {
+      width: 100%;
+    }
   }
 }
 
 .inst-details {
-  padding: 1ch 0.75ch 1ch 1.5ch;
   font-size: 1.2vw;
   display: grid;
   grid-template-rows: auto 1fr;
   user-select: none;
 
   h6 {
-    font-size: 1.6vw;
-    margin-bottom: 1vw;
+    font-size: 1.3vw;
+    margin-bottom: .7vw;
     letter-spacing: 0.5ch;
   }
 
@@ -887,6 +888,7 @@ button:disabled {
 .stats-panel .stats {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
+  padding: 8px 0 6px 10px;
 
   .stats-label {
     display: flex;
@@ -909,27 +911,51 @@ button:disabled {
 .stats-panel .notes {
   grid-row: 2 / 3;
   grid-column: 2 / 3;
-  list-style-type: square;
-  padding-left: 10px;
+  padding: 8px 6px 6px 20px;
+
+  h6 {
+    position: relative;
+    left: -11px;
+  }
 
   ul {
-    list-style-type: square;
-    padding-left: 1.1ch;
+    position: relative;
+
+    span {
+      position: absolute;
+      left: -11px;
+      rotate: 90deg;
+      scale: 90%;
+    }
   }
 }
 
 @media (max-width: 850px) {
+  .stats-panel {
+    grid-template-rows: max(15px, 14%) 1fr;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .stats-panel .title {
+    font-size: 12px;
+    padding: 1px;
+  }
+
   .inst-details {
     font-size: 1vh;
 
     h6 {
-      font-size: 1.5vh;
-      margin-bottom: 0.7vh;
+      font-size: 9px;
+      margin-bottom: 3px;
     }
   }
 
-  .stats-panel .title {
-    font-size: 2vh;
+  .stats-panel .stats {
+    padding: 4px 0 4px 6px;
+  }
+
+  .stats-panel .notes {
+    padding: 4px 2px 4px 16px;
   }
 
   .stats-bar {
@@ -1578,12 +1604,12 @@ img[src*='piccolo'].staging-img {
 
   .info {
     left: 62px;
-    font-size: 22px
+    font-size: 22px;
   }
 
   .moves {
     right: -10px;
-    top: -48px
+    top: -48px;
   }
 
   .move {
@@ -1674,6 +1700,19 @@ img[src*='piccolo'].staging-img {
   }
 }
 
+@media (max-width: 400px) and (max-height: 700px) {
+  .staging-buttons {
+    margin-top: 0;
+  }
+
+  .staging-buttons .material-icons,
+  .staging-buttons .material-icons-outlined {
+    font-size: 16px;
+    margin: 0 1px 0 0;
+  }
+
+}
+
 .intro-text {
   position: relative;
   top: -9%;
@@ -1731,7 +1770,6 @@ img[src*='piccolo'].staging-img {
     }
 
     select {
-      // padding: 5px 0 5px 0;
       height: 27px;
       font-size: 14px;
     }
